--- a/release/ontology/0.1.0/sections/overview-en.html
+++ b/release/ontology/0.1.0/sections/overview-en.html
@@ -6,12 +6,22 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
+      <a href="#https://schema.org/CreativeWork" title="https://schema.org/CreativeWork">CreativeWork</a>
+   </li>
+   <li>
+      <a href="#https://schema.org/DigitalDocument" title="https://schema.org/DigitalDocument">DigitalDocument</a>
+   </li>
+   <li>
       <a href="#Document"
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Document">Document</a>
    </li>
    <li>
       <a href="#Documentcontent"
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Documentcontent">DocumentContent</a>
+   </li>
+   <li>
+      <a href="#DocumentType"
+         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DocumentType">DocumentType</a>
    </li>
    <li>
       <a href="#Iepipeline"
@@ -35,10 +45,10 @@ This ontology has the following classes and properties.</span>
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Scdigitaldocument">SCDigitalDocument</a>
    </li>
    <li>
-      <a href="#http://schema.org/DigitalDocument" title="http://schema.org/DigitalDocument">schema:DigitalDocument</a>
+      <a href="#https://schema.org/Enumeration" title="https://schema.org/Enumeration">schema:Enumeration</a>
    </li>
    <li>
-      <a href="#http://schema.org/Enumeration" title="http://schema.org/Enumeration">schema:Enumeration</a>
+      <a href="#https://schema.org/Thing" title="https://schema.org/Thing">Thing</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
