--- a/release/ontology/latest/sections/overview-en.html
+++ b/release/ontology/latest/sections/overview-en.html
@@ -6,7 +6,17 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
+      <a href="#http://www.w3.org/ns/prov#:Activity" title="http://www.w3.org/ns/prov#:Activity">Activity</a>
+   </li>
+   <li>
+      <a href="#http://www.w3.org/ns/prov#Agent" title="http://www.w3.org/ns/prov#Agent">Agent</a>
+   </li>
+   <li>
       <a href="#https://schema.org/CreativeWork" title="https://schema.org/CreativeWork">CreativeWork</a>
+   </li>
+   <li>
+      <a href="#DigitalDocument"
+         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DigitalDocument">DigitalDocument</a>
    </li>
    <li>
       <a href="#https://schema.org/DigitalDocument" title="https://schema.org/DigitalDocument">DigitalDocument</a>
@@ -24,6 +34,9 @@ This ontology has the following classes and properties.</span>
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DocumentType">DocumentType</a>
    </li>
    <li>
+      <a href="#http://www.w3.org/ns/prov#Entity" title="http://www.w3.org/ns/prov#Entity">Entity</a>
+   </li>
+   <li>
       <a href="#Iepipeline"
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Iepipeline">IEPipeline</a>
    </li>
@@ -32,13 +45,13 @@ This ontology has the following classes and properties.</span>
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Informationextractionworkflow">InformationExtractionWorkflow</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#Activity" title="http://www.w3.org/ns/prov#Activity">prov:Activity</a>
+      <a href="#http://www.w3.org/ns/prov#InstantaneousEvent" title="http://www.w3.org/ns/prov#InstantaneousEvent">InstantaneousEvent</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#Entity" title="http://www.w3.org/ns/prov#Entity">prov:Entity</a>
+      <a href="#http://www.w3.org/ns/prov#Organization" title="http://www.w3.org/ns/prov#Organization">Organization</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#SoftwareAgent" title="http://www.w3.org/ns/prov#SoftwareAgent">prov:SoftwareAgent</a>
+      <a href="#http://www.w3.org/ns/prov#Person" title="http://www.w3.org/ns/prov#Person">Person</a>
    </li>
    <li>
       <a href="#Scdigitaldocument"
@@ -48,11 +61,18 @@ This ontology has the following classes and properties.</span>
       <a href="#https://schema.org/Enumeration" title="https://schema.org/Enumeration">schema:Enumeration</a>
    </li>
    <li>
+      <a href="#http://www.w3.org/ns/prov#SoftwareAgent" title="http://www.w3.org/ns/prov#SoftwareAgent">SoftwareAgent</a>
+   </li>
+   <li>
       <a href="#https://schema.org/Thing" title="https://schema.org/Thing">Thing</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
+   <li>
+      <a href="#contentExtractedFrom"
+         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/contentExtractedFrom">contentExtractedFrom</a>
+   </li>
    <li>
       <a href="#hasdocumentcontent"
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasdocumentcontent">hasDocumentContent</a>
@@ -62,24 +82,31 @@ This ontology has the following classes and properties.</span>
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasdocumenttype">hasDocumentType</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#used" title="http://www.w3.org/ns/prov#used">prov:used</a>
+      <a href="#hasWorkflow"
+         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasWorkflow">hasWorkflow</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#wasAssociatedWith" title="http://www.w3.org/ns/prov#wasAssociatedWith">prov:wasAssociatedWith</a>
+      <a href="#http://www.w3.org/ns/prov#used" title="http://www.w3.org/ns/prov#used">used</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#wasDerivedFrom" title="http://www.w3.org/ns/prov#wasDerivedFrom">prov:wasDerivedFrom</a>
+      <a href="#http://www.w3.org/ns/prov#wasAssociatedWith" title="http://www.w3.org/ns/prov#wasAssociatedWith">wasAssociatedWith</a>
    </li>
    <li>
-      <a href="#http://www.w3.org/ns/prov#wasGeneratedBy" title="http://www.w3.org/ns/prov#wasGeneratedBy">prov:wasGeneratedBy</a>
+      <a href="#http://www.w3.org/ns/prov#wasDerivedFrom" title="http://www.w3.org/ns/prov#wasDerivedFrom">wasDerivedFrom</a>
+   </li>
+   <li>
+      <a href="#http://www.w3.org/ns/prov#wasGeneratedBy" title="http://www.w3.org/ns/prov#wasGeneratedBy">wasGeneratedBy</a>
+   </li>
+   <li>
+      <a href="#http://www.w3.org/ns/prov#wasInfluencedBy" title="http://www.w3.org/ns/prov#wasInfluencedBy">wasInfluencedBy</a>
+   </li>
+   <li>
+      <a href="#workflowExecution"
+         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/workflowExecution">workflowExecution</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
-   <li>
-      <a href="#digitizedcontent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/digitizedcontent">digitizedContent</a>
-   </li>
    <li>
       <a href="#processedtext"
          title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/processedtext">processedText</a>
