--- a/release/ontology/0.1.1/provenance/provenance-en.html
+++ b/release/ontology/0.1.1/provenance/provenance-en.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="head">
-<h1>Provenance for Defense Supply Chain and Documentation Ontology (DSCDO) Documentation (https://schema.e616.crc.nd.edu/nd/scodoc/ont/0.1.1)</h1>
+<h1>Provenance for Defense Supply Chain and Documentation Ontology (DSCDO) Documentation (https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/0.1.1)</h1>
 <ul>
 	<li>Ontology created by: Charles F. Vardeman II</li><li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
 <li>The documentation was generated at 2024-04-09</ul>
