--- a/release/ontology/0.1.0/index-en.html
+++ b/release/ontology/0.1.0/index-en.html
@@ -17,7 +17,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://schema.e616.crc.nd.edu/nd/scodoc/ont/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://schema.e616.crc.nd.edu/nd/scodoc/ont/","name":"Supply Chain Documentation Ontology", "headline":"Document describing the ontology https://schema.e616.crc.nd.edu/nd/scodoc/ont/", "dateReleased":"2024-04-09", "dateModified":"2024-04-09", "version":"0.1.0", "license":"https://creativecommons.org/licenses/by/4.0/", "codeRepository":"https://github.com/crcresearch/earth616_ontology", "author":[{"@type":"Person","name":"Charles F. Vardeman II","url":"https://orcid.org/0000-0003-4091-6059"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/","name":"Supply Chain Documentation Ontology", "headline":"Document describing the ontology https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/", "dateReleased":"2024-04-09", "dateModified":"2024-04-09", "version":"0.1.0", "license":"https://creativecommons.org/licenses/by/4.0/", "codeRepository":"https://github.com/crcresearch/earth616_ontology", "author":[{"@type":"Person","name":"Charles F. Vardeman II","url":"https://orcid.org/0000-0003-4091-6059"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -78,7 +78,7 @@ function loadTOC(){
 <dl>
 <dt>Modified on: 2024-04-09</dt>
 <dt>This version:</dt>
-<dd><a href="https://schema.e616.crc.nd.edu/nd/scodoc/ont/0.1.0">https://schema.e616.crc.nd.edu/nd/scodoc/ont/0.1.0</a></dd>
+<dd><a href="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/0.1.0">https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/0.1.0</a></dd>
 <dt>Revision:</dt>
 <dd>0.1.0</dd>
 <dt>Authors:</dt>
@@ -89,7 +89,7 @@ function loadTOC(){
 <dt>Download serialization:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.owl" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License:</dt><dd><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"><img src="https://img.shields.io/badge/License-https://creativecommons.org/licenses/by/4.0/-blue.svg" alt="https://creativecommons.org/licenses/by/4.0/" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <!-- <dt>Evaluation:</dt><dd><a href="OOPSevaluation/oopsEval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
-<dd>Charles F. Vardeman II. Supply Chain Documentation Ontology. Revision: 0.1.0. Retrieved from: https://schema.e616.crc.nd.edu/nd/scodoc/ont/0.1.0</dd>
+<dd>Charles F. Vardeman II. Supply Chain Documentation Ontology. Revision: 0.1.0. Retrieved from: https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/0.1.0</dd>
 <dt>Vocabulary maintained at:</dt>
 <dd><a href="https://github.com/crcresearch/earth616_ontology">https://github.com/crcresearch/earth616_ontology</a></dd>
 </dl>
