--- a/release/ontology/latest/sections/overview-en.html
+++ b/release/ontology/latest/sections/overview-en.html
@@ -13,56 +13,56 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#Agent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Agent">Agent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Agent">Agent</a>
    </li>
    <li>
       <a href="#BeingMeasuredRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/BeingMeasuredRole">Being Measured Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/BeingMeasuredRole">Being Measured Role</a>
    </li>
    <li>
       <a href="#BeingShippedRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/BeingShippedRole">Being Shipped Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/BeingShippedRole">Being Shipped Role</a>
    </li>
    <li>
       <a href="#ContainedInRelation"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/ContainedInRelation">Contained In Relation</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/ContainedInRelation">Contained In Relation</a>
    </li>
    <li>
       <a href="#https://schema.org/CreativeWork" title="https://schema.org/CreativeWork">CreativeWork</a>
    </li>
    <li>
       <a href="#CustodyChangeEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/CustodyChangeEvent">Custody Change Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/CustodyChangeEvent">Custody Change Event</a>
    </li>
    <li>
       <a href="#DigitalDocument"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DigitalDocument">DigitalDocument</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/DigitalDocument">DigitalDocument</a>
    </li>
    <li>
       <a href="#https://schema.org/DigitalDocument" title="https://schema.org/DigitalDocument">DigitalDocument</a>
    </li>
    <li>
       <a href="#Document"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Document">Document</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Document">Document</a>
    </li>
    <li>
       <a href="#DocumentationSource"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DocumentationSource">Documentation Source</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/DocumentationSource">Documentation Source</a>
    </li>
    <li>
       <a href="#Documentcontent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Documentcontent">DocumentContent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Documentcontent">DocumentContent</a>
    </li>
    <li>
       <a href="#DocumentType"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/DocumentType">DocumentType</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/DocumentType">DocumentType</a>
    </li>
    <li>
       <a href="#http://www.w3.org/ns/prov#Entity" title="http://www.w3.org/ns/prov#Entity">Entity</a>
    </li>
    <li>
       <a href="#EquipmentRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/EquipmentRole">Equipment Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/EquipmentRole">Equipment Role</a>
    </li>
    <li>
       <a href="#http://org.semanticweb.owlapi/error#Error1" title="http://org.semanticweb.owlapi/error#Error1">
@@ -76,44 +76,44 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#Event"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Event">Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Event">Event</a>
    </li>
    <li>
       <a href="#Iepipeline"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Iepipeline">IEPipeline</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Iepipeline">IEPipeline</a>
    </li>
    <li>
       <a href="#InformationObject"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/InformationObject">Information Object</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/InformationObject">Information Object</a>
    </li>
    <li>
       <a href="#Informationextractionworkflow"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Informationextractionworkflow">InformationExtractionWorkflow</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Informationextractionworkflow">InformationExtractionWorkflow</a>
    </li>
    <li>
       <a href="#http://www.w3.org/ns/prov#InstantaneousEvent" title="http://www.w3.org/ns/prov#InstantaneousEvent">InstantaneousEvent</a>
    </li>
    <li>
       <a href="#ObservationEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/ObservationEvent">Observation Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/ObservationEvent">Observation Event</a>
    </li>
    <li>
       <a href="#http://www.w3.org/ns/prov#Organization" title="http://www.w3.org/ns/prov#Organization">Organization</a>
    </li>
    <li>
       <a href="#OwnershipChangeEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/OwnershipChangeEvent">Ownership Change Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/OwnershipChangeEvent">Ownership Change Event</a>
    </li>
    <li>
       <a href="#ParticipantRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/ParticipantRole">Participant Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/ParticipantRole">Participant Role</a>
    </li>
    <li>
       <a href="#http://www.w3.org/ns/prov#Person" title="http://www.w3.org/ns/prov#Person">Person</a>
    </li>
    <li>
       <a href="#Scdigitaldocument"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/Scdigitaldocument">SCDigitalDocument</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/Scdigitaldocument">SCDigitalDocument</a>
    </li>
    <li>
       <a href="#https://schema.org/Enumeration" title="https://schema.org/Enumeration">schema:Enumeration</a>
@@ -123,145 +123,145 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#SourceCustodianRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SourceCustodianRole">Source Custodian Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SourceCustodianRole">Source Custodian Role</a>
    </li>
    <li>
       <a href="#SourceOwnerRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SourceOwnerRole">Source Owner Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SourceOwnerRole">Source Owner Role</a>
    </li>
    <li>
       <a href="#SourceRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SourceRole">Source Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SourceRole">Source Role</a>
    </li>
    <li>
       <a href="#SpatioTemporalExtent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SpatioTemporalExtent">Spatiotemporal Extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SpatioTemporalExtent">Spatiotemporal Extent</a>
    </li>
    <li>
       <a href="#SupplyChainEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SupplyChainEvent">Supply Chain Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SupplyChainEvent">Supply Chain Event</a>
    </li>
    <li>
       <a href="#SupplyChainRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SupplyChainRole">Supply Chain Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SupplyChainRole">Supply Chain Role</a>
    </li>
    <li>
       <a href="#SupplyChainSpatiotemporalExtent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/SupplyChainSpatiotemporalExtent">Supply Chain Spatiotemporal Extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/SupplyChainSpatiotemporalExtent">Supply Chain Spatiotemporal Extent</a>
    </li>
    <li>
       <a href="#TargetCustodianRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TargetCustodianRole">Target Custodian Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TargetCustodianRole">Target Custodian Role</a>
    </li>
    <li>
       <a href="#TargetOwnerRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TargetOwnerRole">Target Owner Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TargetOwnerRole">Target Owner Role</a>
    </li>
    <li>
       <a href="#TargetRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TargetRole">Target Role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TargetRole">Target Role</a>
    </li>
    <li>
       <a href="#TemporalExtent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TemporalExtent">Temporal Extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TemporalExtent">Temporal Extent</a>
    </li>
    <li>
       <a href="#https://schema.org/Thing" title="https://schema.org/Thing">Thing</a>
    </li>
    <li>
       <a href="#TransferEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TransferEvent">Transfer Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TransferEvent">Transfer Event</a>
    </li>
    <li>
       <a href="#TransformationActivity"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TransformationActivity">Transformation Activity</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TransformationActivity">Transformation Activity</a>
    </li>
    <li>
       <a href="#TransformationEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TransformationEvent">Transformation Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TransformationEvent">Transformation Event</a>
    </li>
    <li>
       <a href="#TransportEvent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/TransportEvent">Transport Event</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/TransportEvent">Transport Event</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
       <a href="#assumesRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/assumesRole">assumes role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/assumesRole">assumes role</a>
    </li>
    <li>
       <a href="#contentExtractedFrom"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/contentExtractedFrom">contentExtractedFrom</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/contentExtractedFrom">contentExtractedFrom</a>
    </li>
    <li>
       <a href="#hasContainedInRelation"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasContainedInRelation">has contained in relation</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasContainedInRelation">has contained in relation</a>
    </li>
    <li>
       <a href="#hasFurtherDocumentation"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasFurtherDocumentation">has further documentation</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasFurtherDocumentation">has further documentation</a>
    </li>
    <li>
       <a href="#hasInformationObject"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasInformationObject">has information object</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasInformationObject">has information object</a>
    </li>
    <li>
       <a href="#hasPostCondition"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasPostCondition">has postcondition</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasPostCondition">has postcondition</a>
    </li>
    <li>
       <a href="#hasPreCondition"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasPreCondition">has precondition</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasPreCondition">has precondition</a>
    </li>
    <li>
       <a href="#hasSTETE"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasSTETE">has spatiotemporal extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasSTETE">has spatiotemporal extent</a>
    </li>
    <li>
       <a href="#hasSpatioTemporalExtent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasSpatioTemporalExtent">has spatiotemporal extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasSpatioTemporalExtent">has spatiotemporal extent</a>
    </li>
    <li>
       <a href="#hasTemporalExtent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasTemporalExtent">has temporal extent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasTemporalExtent">has temporal extent</a>
    </li>
    <li>
       <a href="#hasDocument"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasDocument">hasDocument</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasDocument">hasDocument</a>
    </li>
    <li>
       <a href="#hasdocumentcontent"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasdocumentcontent">hasDocumentContent</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasdocumentcontent">hasDocumentContent</a>
    </li>
    <li>
       <a href="#hasdocumenttype"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasdocumenttype">hasDocumentType</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasdocumenttype">hasDocumentType</a>
    </li>
    <li>
       <a href="#hasWorkflow"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/hasWorkflow">hasWorkflow</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/hasWorkflow">hasWorkflow</a>
    </li>
    <li>
       <a href="#occursAt"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/occursAt">occurs at</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/occursAt">occurs at</a>
    </li>
    <li>
       <a href="#producedAt"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/producedAt">produced at</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/producedAt">produced at</a>
    </li>
    <li>
       <a href="#providesParticipantRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/providesParticipantRole">provides participant role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/providesParticipantRole">provides participant role</a>
    </li>
    <li>
       <a href="#providesRole"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/providesRole">provides role</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/providesRole">provides role</a>
    </li>
    <li>
       <a href="#subEventOf"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/subEventOf">sub event of</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/subEventOf">sub event of</a>
    </li>
    <li>
       <a href="#http://www.w3.org/ns/prov#used" title="http://www.w3.org/ns/prov#used">used</a>
@@ -280,20 +280,20 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#workflowExecution"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/workflowExecution">workflowExecution</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/workflowExecution">workflowExecution</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
       <a href="#processedtext"
-         title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/processedtext">processedText</a>
+         title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/processedtext">processedText</a>
    </li>
 </ul><h4>Named Individuals</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#" title="https://schema.e616.crc.nd.edu/nd/scodoc/ont/">
+      <a href="#" title="https://schema.earth616.crc.nd.edu:8443/nd/scdoc/ont/">
          <span></span>
       </a>
    </li>
